# duckdb-onnx

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
scripts/: setup-custom-toolchain.sh
src/: CMakeLists.txt  error.cpp  onnx_extension.cpp
src/core/: CMakeLists.txt
src/core/model/: CMakeLists.txt  graph.cpp  node.cpp
src/core/ops/: CMakeLists.txt  ops.cpp
src/include/: onnx_extension.hpp
src/include/duckdb-onnx/: error.h  tensor.h  value.h
src/include/duckdb-onnx/core/model/: graph.hpp  node.hpp
src/include/duckdb-onnx/core/ops/: ops.h
src/include/duckdb-onnx/onnx/: model.hpp
src/onnx/: CMakeLists.txt  model.cpp
src/onnx/protos/: onnx.proto3
test/: README.md
test/sql/: onnx.test
unit_test/: CMakeLists.txt  mnist_inference.cpp
